# RustRaytracer

./: .gitignore  Cargo.toml  README.md
data/cat/: 12221_Cat_v1_l3.mtl
data/stormtrooper/: scene.xml
src/: bsdf.rs  bxdf.rs  consts.rs  distribution.rs  geometry.rs  hittable.rs  integrator.rs  intersects.rs  light.rs  main.rs  material.rs  microfacet.rs  parser.rs  pdf.rs  perlin.rs  primitive.rs  render.rs  sampler.rs  scenes.rs  util.rs
src/imgui_support/: mod.rs
