[package]
name = "rust_raytrace"
version = "0.1.0"
authors = ["Calvin Godfrey <calvinbbcard@gmail.com>"]
edition = "2018"

[dependencies]
nalgebra = "0.21.1"
rand = "0.7"
image = "0.23.6"
tobj = "2.0.2"
bumpalo = "3.4.0"
rand_pcg = "0.2.1"
imgui = "0.7.0"
imgui-glium-renderer = "0.7.0"
imgui-winit-support = "0.7.0"
clipboard = "0.5.0"
glium = "0.29.0"